--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "find-it-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://adamoleszko.github.io/find-it-client/",
   "dependencies": {
     "axios": "^0.18.0",
     "formik": "^1.5.4",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
@@ -16,7 +18,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
